[project]
name = "paindrop"
version = "0.1.0"
description = "A command line tool that imports Pinboard data into Raindrop"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
paindrop = "paindrop.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.1",
    "types-requests>=2.32.0.20240712",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/paindrop"]
